spaced out categories a bit, corrected alignment. Final look?

--- a/sinatra-skeleton-master/public/stylesheets/application.css
+++ b/sinatra-skeleton-master/public/stylesheets/application.css
@@ -1,3 +1,5 @@
+
+
 img {
     max-width: 100%; 
     height:150px;
@@ -6,7 +8,6 @@ img {
 #description {
   font-style: italic;
 }
-
 
 .product-listview img {
   float: left;
@@ -114,11 +115,11 @@ img {
 }
 
 #login-button {
-position: relative;
-float: right;
-display: inline-block;
-z-index: 2;
-border-radius: 8px
+  position: relative;
+  float: right;
+  display: inline-block;
+  z-index: 2;
+  border-radius: 8px
 }
 
 #signup {
@@ -166,14 +167,15 @@ display: inline-block;
 }
 
 #category-panel {
-  float: left;
   margin: 10px;
+  margin-left: 33px;
   width: 225px;
   height: 225px;
   border: 2px solid;
   border-radius: 25px;
   box-shadow: 10px 10px 5px #888888;
   background-color: white;
+  float:left;
 }
 
 #copyright {
